Add OpenAI support, fallback mechanism, and expanded testing
Includes:
- OpenAI ChatGPT integration alongside local LLM (Ollama) support
- Fallback to OpenAI if Ollama fails (configurable via `ENABLE_FALLBACK`)
- New tests for OpenAI integration, fallback behavior, and error handling
- Updates to `README.md` and `.env.example` for new configuration options and usage details

--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,25 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 BOT_NAME=cooperbot
 
-# LLM/Ollama Configuration
+# API Provider Configuration
+# Set to "ollama" for local LLM or "openai" for OpenAI ChatGPT
+API_PROVIDER=ollama
+
+# Local LLM/Ollama Configuration (when API_PROVIDER=ollama)
 OLLAMA_URL=http://localhost:11434/api/chat
 MODEL=llama3.1:8b
+
+# OpenAI Configuration (when API_PROVIDER=openai or as fallback)
+OPENAI_API_KEY=your_openai_api_key_here
+OPENAI_URL=https://api.openai.com/v1/chat/completions
+# MODEL=gpt-3.5-turbo  # Uncomment and set when using OpenAI as primary
+
+# Fallback Configuration
+# When API_PROVIDER=ollama, automatically fallback to OpenAI if Ollama fails
+ENABLE_FALLBACK=true
+FALLBACK_MODEL=gpt-3.5-turbo
+
+# Common LLM Parameters
 TEMPERATURE=0.7
 MAX_TOKENS=120
 
